Incorporate EndlessAdapter for now. Update to new gradle build version, compileSdk 23